# k3s-docker-gpu

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  deploy.sh  deployment.yaml  pyproject.toml  run.sh
.claude/: settings.json
src/: __init__.py  gpu_test.py
